tests/paczka1/small_fuzzy/51014715.err
Error in line 2: hdFQ A4 2,6
Error in line 7: iLu A69 85,6
